# hsol.info

./: .dockerignore  .gitignore  .gitmodules  .vercelignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.jsx  atoms.jsx  chatdock.css  data.js  docker-pull.sh  docker-push.sh  gantt.css  index.html  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  pcconfig.py  pyproject.toml  rxconfig.py
.github/workflows/: build-with-vault-refresh.yml  submodule-blob-sync.yml  submodule-check.yml
app/: app.py  constants.py  styles.py
app/components/: __init__.py  badge.py  fullfill_card.py  hero.py  navbar.py  page.py
app/models/: experience.py  history.py  history_to_stack.py  profile.py  stack.py
app/pages/: __init__.py  base.py  index.py
app/states/: base.py
app/utils/: __init__.py
assets/styles/: base.css  base.css.map  base.scss
docs/: architecture-diagram.md
public/: ads.txt  feed.xsl  hansol.avif  llms.txt  robots.txt  sitemap  sitemap.xml
scripts/: build-sitemap.ts  check-compose-sample.ts  generate-onepager-pdf.ts  generate-site-ts-from-vault.ts  pilot-composition.ts  pilot-curious-composition.ts  pull-blob-to-submodule.mjs  refresh-site-data-with-claude.ts  snapshot-layout-to-site-data.ts  sync-articles.ts  sync-submodule-to-blob.mjs
scripts/lib/: pipeline-flags.ts  site-data-patch.test.ts  site-data-patch.ts
scripts/sql/: 001-ask-hansol-messages.sql  002-ask-hansol-session-memory.sql  003-build-log.sql  004-ask-hansol-feedback.sql
src/: middleware.ts
v1/: app.jsx  atoms.jsx  data.js  index.html  styles.css  views.jsx
(+166 files in other folders)
