[tool.poetry]
name = "hsol-info"
version = "0.1.0"
description = ""
authors = ["molmoty <molmoty@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pynecone = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
