[tool.poetry]
name = "hsol-info"
version = "0.1.0"
description = ""
authors = ["molmoty <molmoty@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.0.3"
reflex = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
